src/test/ui/issues/issue-3008-2.stderr
error[E0072]: recursive type `Bar` has infinite size
  --> $DIR/issue-3008-2.rs:2:1
   |
LL | struct Bar { x: Bar }
   | ^^^^^^^^^^   ------ recursive without indirection
   | |
   | recursive type has infinite size
   |
   = help: insert indirection (e.g., a `Box`, `Rc`, or `&`) at some point to make `Bar` representable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0072`.
